# NDQ

./: CMakeLists.txt  nuget.bat
examples/01-window/: CMakeLists.txt  main.cpp
examples/02-triangle/: CMakeLists.txt  main.cpp  pixel.hlsl  vertex.hlsl
examples/03-model/: CMakeLists.txt  main.cpp
include/ndq/: window.h
include/ndq/core/: blob.h  releasable.h  resource.h
include/ndq/platform/: window.h
include/ndq/render/: light.h  renderable.h  renderer.h
include/ndq/rhi/: command_list.h  core.h  device.h  root_signature.h  shader.h
include/ndq/utility/: load_shader.h
source/: CMakeLists.txt  window.cpp
source/core/: blob.cpp
source/platform/: window.cpp
source/render/: renderable.cpp  renderer.cpp
source/rhi/: command_list.cpp  core.cpp  device.cpp  root_signature.cpp  shader.cpp
source/utility/: load_shader.cpp
